# ccf_feature_extraction

./: CMakeLists.txt  README.md  package.xml
include/ccf_feature_extraction/: ccf_extractor.hpp
src/: ccf_feature_extraction_test.cpp
