<?xml version="1.0"?>
<package>
  <name>ccf_feature_extraction</name>
  <version>0.0.0</version>
  <description>The ccf_feature_extraction package</description>

  <maintainer email="koide@aisl.cs.tut.ac.jp">koide</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <export>
  </export>
</package>
